# weather-space

./: .env.example  Dockerfile.backend  IMPLEMENTATION.md  README.md  STRUCTURE.md  demo.py  docker-compose.yml  final_test.py  pyproject.toml  schema.sql  test_validation.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: AlertsList.js  LocationsList.js  WeatherChart.js
frontend/src/services/: api.js
weather_dashboard/: __init__.py  main.py
weather_dashboard/api/: __init__.py  alerts.py  locations.py  weather.py
weather_dashboard/core/: __init__.py  config.py  database.py
weather_dashboard/models/: __init__.py  weather.py
weather_dashboard/schemas/: __init__.py  weather.py
weather_dashboard/services/: __init__.py  openweather.py  weather_service.py
weather_dashboard/tasks/: __init__.py  celery_app.py  weather_tasks.py
